--- a/styles.css
+++ b/styles.css
@@ -141,3 +141,32 @@ HEADER
     color: #474747;
     font-size: 1.6em;
 }
+
+/*==========================
+FOOTER
+===========================*/
+.page-footer:before {
+    content: "";
+    display: block;
+    height: 5px;
+    background: #ebebeb;
+}
+
+.page-footer {
+    background: #f4f4f4;
+    color: #9b9b9b;
+    font-size: 1rem;
+    height: 70px;
+} 
+
+.page-footer .copyright {
+    float: left;
+}
+
+.page-footer .credits {
+    float: right
+}
+
+.page-footer-content {
+    padding: 1em 0;
+}
