--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ html, body {
     margin: 0 auto;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, .title {
     font-family: "Economica", sans-serif;
     text-transform: uppercase;
     font-weight: bold;
@@ -88,6 +88,11 @@ a {
 a:hover, a:visited, a:active {
     color: inherited;
     text-decoration: none;
+}
+
+p {
+    margin: 0.5em 0;
+    line-height: 1.3;
 }
 
 .clearfix {
@@ -140,6 +145,23 @@ HEADER
     display: block;
     color: #474747;
     font-size: 1.6em;
+}
+
+/*==========================
+MAIN VISUAL
+===========================*/
+
+.main-visual figcaption {
+    background-color: #f6f6f6;
+    padding: 0.5em 1em;
+}
+
+.main-visual img {
+    display: block;
+}
+
+.main-visual figcaption > strong {
+    font-size: 1.4em;
 }
 
 /*==========================
