Claims part done

--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,9 @@ p {
     clear: both;
 }
 
+.data-block {
+    margin-bottom: 3rem;
+}
 /*==========================
 HEADER
 ===========================*/
@@ -162,6 +165,33 @@ MAIN VISUAL
 
 .main-visual figcaption > strong {
     font-size: 1.4em;
+}
+
+/*==========================
+CLAIMS
+===========================*/
+
+.claim {
+    float: left;
+    width: 30%;
+    margin-right: 5%;
+}
+
+.claim:last-child {
+    margin-right: 0;
+}
+
+.claim header i {
+    font-size: 2.5rem;
+    float: left;
+    width: 25%;
+    font-weight: bold;
+    color: #9a9a9a;
+}
+
+.claim header > h2 {
+    float: left;
+    width: 75%;
 }
 
 /*==========================
